# shawnaiutils

./: pyproject.toml  test.py
shawnaiutils/: __init__.py  callbacks.py
shawnaiutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
