[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shawnaiutils"
version = "0.1.1"
description = "Shawn's personal ML utility package"
authors = [{ name = "Shawn Burnham", email = "swb0027@auburn.edu" }]
license = { text = "MIT" }
dependencies = [
    "tensorflow",
    "keras",
]
readme = "README.md"
requires-python = ">=3.9"
